--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +34,24 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.all-pets {
+  width:80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin:0 auto;
+}
+
+
+.Pet {
+  width:50%;
+}
+
+
+img {
+  object-fit: cover;
+  width:90%;
 }
